--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "prisma": "^5.7.0",
+    "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
