--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@types/leaflet": "^1.9.21",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^2.4.3",
+    "leaflet": "^1.9.4",
     "next": "14.0.4",
     "nodemailer": "^7.0.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
