Add NextAuth.js authentication and TypeScript improvements

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,23 @@
 # Database
+# PostgreSQL connection string for Prisma
 DATABASE_URL="postgresql://postgres:password123@localhost:5432/skate_sharpener_db"
+# Direct database URL (required for some Prisma operations)
+DIRECT_URL="postgresql://postgres:password123@localhost:5432/skate_sharpener_db"
 
-# NextAuth (generate with: openssl rand -base64 32)
-NEXTAUTH_SECRET="your-secret-key-here"
+# NextAuth Configuration
+# Generate secret with: openssl rand -base64 32
+NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
+# Application URL
 NEXTAUTH_URL="http://localhost:3000"
+
+# Email/SMTP Configuration
+# SMTP server hostname
+SMTP_HOST="smtp.gmail.com"
+# SMTP server port (587 for TLS, 465 for SSL)
+SMTP_PORT="587"
+# SMTP username (email address)
+SMTP_USER="your-email@gmail.com"
+# SMTP password or app-specific password
+SMTP_PASSWORD="your-app-password"
+# From email address for outgoing emails
+SMTP_FROM="Skate Sharpener Finder <noreply@skatesharpener.com>"
