--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "next": "14.0.4",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.5.6",
     "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
