--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.7.0",
     "@types/leaflet": "^1.9.21",
     "@types/nodemailer": "^7.0.4",
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^2.4.3",
     "leaflet": "^1.9.4",
     "next": "14.0.4",
